# blockSQP_reference_build

./: .gitignore  CMakeLists.txt  LICENSE  OCP_experiment_old.py  blockSQP_fix_doublefree_oobread.patch  blockSQP_fix_doublefree_oobwrite.patch  example1.py  example1_sparse.py  localcopy_OCProblems.py  py_blockSQP.cpp  qpOASES_fix_MUMPS.patch  readme.md  run_old_blockSQP.py  run_old_blockSQP_experiments.py
py_blockSQP_old/: __init__.py  blockSQP_Problemspec.py
